# Noteman

./: .gitignore  api.py  apidb.py  example_api_db.py  example_db.py  pyproject.toml  readme.md
noteman/: cli.py  db.py  gather.py  notes.py  remove.py
routes/: gather.py  notes.py  remove.py
